--- a/src/main.css
+++ b/src/main.css
@@ -154,16 +154,16 @@ header ul li {
 /* Nav */
 /* -- background: linear-gradient(to right, #0072dc, #00d5e2); 활성화 시 그라데이션 */
 
-#accordian h3 { font-size: 14pt; height: 40px; padding: 16px; cursor: pointer; background: #292a3f;}
-#accordian h3:hover { text-shadow: 0 0 1px rgba(255, 255, 255, 0.7); }
-#accordian h3 span {margin-right: 10px; }  /* 아이콘폰트 스타일 */
-#accordian li { list-style-type: none; font-size:14pt; color: white; border-bottom:1px solid #383950; background-color: #232532;}
+#accordian h3 { font-size: 14pt; height: 40px; padding: 16px; cursor: pointer; background: #292a3f;}  /* Gate 메인 */
+#accordian h3:hover { text-shadow: 0 0 1px; color: white; background:linear-gradient(to right, #0072dc, #00d5e2); } /*Gate에 마우스 커서 올라갔을 시 */
+#accordian h3 span {margin-right: 10px;}  /* 아이콘폰트 스타일 */
+#accordian li { list-style-type: none; font-size:14pt; color: #95a3c7; border-bottom:1px solid #383950; background-color: #232532;}
 
-#accordian ul ul li a { color: white; padding-left:20px; text-decoration: none; font-size: 11px; line-height: 27px; display: block; padding: 0 15px;
-    -webkit-transition: all 0.15s; -moz-transition: all 0.15s; -o-transition: all 0.15s; -ms-transition: all 0.15s; transition: all 0.15s; } /* Gate 1*/
-#accordian ul ul li a:hover { background: #292a3f; border-left: 5px solid #0091f7; }
+#accordian ul ul li a { color: #95a3c7; padding-left:20px; margin-top:5px; height: 30px; text-decoration: none; font-size: 12px;display: block; padding: 0 15px;
+    -webkit-transition: all 0.15s; -moz-transition: all 0.15s; -o-transition: all 0.15s; -ms-transition: all 0.15s; transition: all 0.15s; } /* Gate 서브메뉴 (정산기) */
+#accordian ul ul li a:hover { background: #292a3f; color: white; border-left: 5px solid #0091f7; } /*정산기에 마우스 커서 올라갔을 시*/
 #accordian ul ul { display: none; }  /* active 클래스 외에 것은 보이지 않게 하기 */
-#accordian li.active ul { display: block; }
+#accordian li.active ul { display: none; } /* 디폴트로 열려있기 */
 
 /* section */
 .table1{
