--- a/src/main.css
+++ b/src/main.css
@@ -116,7 +116,6 @@ header ul li {
 }
 
 .dropdown-menu {
-    /*background-color: darkorange; */
     color: #95a3c7;
     padding: 0px;
     margin-left: 20px;
@@ -148,8 +147,7 @@ header ul li {
     background-color: #f1f1f1
 }
 .dropdown-menu:hover:not(.name) {
-    background-color: #050099;
-    color: white;
+    color: #74e8ff;
 }
 /* Nav */
 /* -- background: linear-gradient(to right, #0072dc, #00d5e2); 활성화 시 그라데이션 */
@@ -161,7 +159,7 @@ header ul li {
 
 #accordian ul ul li a { color: #95a3c7; padding-left:20px; margin-top:5px; height: 30px; text-decoration: none; font-size: 12px;display: block; padding: 0 15px;
     -webkit-transition: all 0.15s; -moz-transition: all 0.15s; -o-transition: all 0.15s; -ms-transition: all 0.15s; transition: all 0.15s; } /* Gate 서브메뉴 (정산기) */
-#accordian ul ul li a:hover { background: #292a3f; color: white; border-left: 5px solid #0091f7; } /*정산기에 마우스 커서 올라갔을 시*/
+#accordian ul ul li a:hover { background: #292a3f; color: #74e8ff; border-left: 5px solid #0091f7; } /*정산기에 마우스 커서 올라갔을 시*/
 #accordian ul ul { display: none; }  /* active 클래스 외에 것은 보이지 않게 하기 */
 #accordian li.active ul { display: none; } /* 디폴트로 열려있기 */
 
