--- a/src/main.css
+++ b/src/main.css
@@ -55,25 +55,28 @@ a {
     background:transparent;
     text-decoration:none;
 }
+/*
 section{
     float: left;
     height: 294px;
     background-color: #323347;
     width: 1146px;
 }
+*/
+
 article{
     float: left;
     height: 344px;
     background-color: #323347;
     width: 1146px;
 }
-#wrap { margin:0; width:1366px; height:768px; background-color: white; }
-#equipment  { margin-left: 16px;}
+#wrap { margin:0; width:100%; height:100%; background-color: white; }
 #accordian { background: #292a3f; width: 50px;color: white; box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.6), 0 0 200px 1px rgba(255, 255, 255, 0.5); } /* 메뉴 스타일 */
+
+#container{float: left; text-align:center; height: 294px; background-color: #323347; width: 1146px;}
 #wrong  { margin-left: 12px;}
 #gate{ }
 /* 메뉴바 */
-.
 .menubar li ul {
     display:none;  /* 평상시에는 서브메뉴가 안보이게 하기 */
     height:80px;
@@ -164,8 +167,7 @@ header ul li {
 
 /* section */
 .table1{
-    table-layout:auto;
-    border: 1px solid;
+    border: 0px solid;
     margin-left: 16px;
     width: 286px;
     height: 294px;
@@ -175,9 +177,9 @@ header ul li {
 .table1 tr{}
 
 .table2{
-    table-layout:auto;
+    /*float: right;*/
     border: 1px solid;
-    margin-left: 16px;
+    margin-left: 12px;
     width: 280px;
     height: 294px;
     Border-radius: 6px;
