--- a/src/main.css
+++ b/src/main.css
@@ -73,8 +73,7 @@ article{
 #wrap { margin:0; width:100%; height:100%; background-color: white; }
 #accordian { background: #292a3f; width: 50px;color: white; box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.6), 0 0 200px 1px rgba(255, 255, 255, 0.5); } /* 메뉴 스타일 */
 
-#container{float: left; text-align:center; height: 294px; background-color: #323347; width: 1146px;}
-#wrong  { margin-left: 12px;}
+#container{float:left; width:1146px; height: 294px; background-color: #323347;}
 #gate{ }
 /* 메뉴바 */
 .menubar li ul {
@@ -167,18 +166,19 @@ header ul li {
 
 /* section */
 .table1{
-    border: 0px solid;
+    border: 1px solid;
     margin-left: 16px;
     width: 286px;
     height: 294px;
-    Border-radius: 6px;
+    border-radius: 6px;
+    background: #e7edf2;
+
 }
 .table1 th{}
 .table1 tr{}
 
 .table2{
-    /*float: right;*/
-    border: 1px solid;
+    border: 10px solid yellow;
     margin-left: 12px;
     width: 280px;
     height: 294px;
